force-app/main/default/objects/ServiceOps_Case_Signal__c/ServiceOps_Case_Signal__c.object-meta.xml
<CustomObject>
    <description>Stores calculated risk signals for cases (Reply Risk, Queue Risk, SLA Risk).</description>
    <label>ServiceOps Case Signal</label>
    <nameField>
        <displayFormat>SIGNAL-{000000}</displayFormat>
        <label>Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceOps Case Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>