force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>The case associated with this risk signal.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ServiceOps Case Signals</relationshipLabel>
    <relationshipName>ServiceOps_Case_Signals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>