force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Detected_At__c.field-meta.xml
<CustomField>
    <fullName>Detected_At__c</fullName>
    <description>Time when the signal was first detected.</description>
    <label>Detected At</label>
    <type>DateTime</type>
</CustomField>