force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Ignored_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ignored_Reason__c</fullName>
    <description>Explanation of why the signal was ignored by the user.</description>
    <label>Ignored Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>