force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Is_Active_Signal__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Signal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True if the signal is still open/relevant.</description>
    <label>Is Active Signal</label>
    <type>Checkbox</type>
</CustomField>