force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Last_Inbound_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Email_Date__c</fullName>
    <description>The date/time of the last inbound email from the customer.</description>
    <label>Last Inbound Email Date</label>
    <type>DateTime</type>
</CustomField>