force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Last_Outbound_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Outbound_Email_Date__c</fullName>
    <description>The date/time of the last outbound email from an agent.</description>
    <label>Last Outbound Email Date</label>
    <type>DateTime</type>
</CustomField>