force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Milestone_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Target_Date__c</fullName>
    <description>Target date/time of the active milestone causing the risk.</description>
    <label>Milestone Target Date</label>
    <type>DateTime</type>
</CustomField>