force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Minutes_To_Breach__c.field-meta.xml
<CustomField>
    <fullName>Minutes_To_Breach__c</fullName>
    <description>Minutes remaining until SLA breach.</description>
    <label>Minutes To Breach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>