force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Queue_Age_Min__c.field-meta.xml
<CustomField>
    <fullName>Queue_Age_Min__c</fullName>
    <label>Queue Age (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>