force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <description>Machine-readable reason for the signal.</description>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>