force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>Reason_Text__c</fullName>
    <description>Human-readable explanation of why the risk was detected.</description>
    <label>Reason Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>