force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Resolved_At__c.field-meta.xml
<CustomField>
    <fullName>Resolved_At__c</fullName>
    <description>Time when the signal was marked as resolved.</description>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>