force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <description>Type of operational risk detected.</description>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reply Risk</fullName>
            </value>
            <value>
                <fullName>Queue Risk</fullName>
            </value>
            <value>
                <fullName>SLA Risk</fullName>
            </value>
            <value>
                <fullName>No Touch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>