force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>ID of the record that triggered the signal (e.g. EmailMessage Id).</description>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>