force-app/main/default/objects/ServiceOps_Case_Signal__c/fields/Time_Since_Customer_Reply_Min__c.field-meta.xml
<CustomField>
    <fullName>Time_Since_Customer_Reply_Min__c</fullName>
    <label>Time Since Customer Reply (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>